<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>com.github.gwr3n</groupId>
  <artifactId>syat-choco</artifactId>
  <version>1.0.1-SNAPSHOT</version>
  <packaging>jar</packaging>

  <name>syat-choco</name>
  <url>https://gwr3n.github.io/syat-choco/</url>
  <description>syāt is a suite of declarative modelling tools for statistical analysis.

Global constraints and modeling tools covered in this library have been originally introduced in Rossi et al., &quot;Declarative Statistics&quot;, 2017 (https://arxiv.org/abs/1708.01829).</description>
  <inceptionYear>2017</inceptionYear>
  
  <licenses>
	<license>
		<name>MIT License</name>
		<url>http://www.opensource.org/licenses/mit-license.php</url>
		<distribution>repo</distribution>
	</license>
  </licenses>
  
  <scm>
  	<url>https://github.com/gwr3n/syat-choco</url>
	<connection>scm:git:git://github.com/gwr3n/syat-choco.git</connection>
	<developerConnection>scm:git:ssh://github.com:gwr3n/syat-choco.git</developerConnection>
  </scm>
  
  <developers>
	<developer>
		<email>robros@gmail.com</email>
		<name>Roberto Rossi</name>
		<url>https://gwr3n.github.io/</url>
		<id>gwr3n</id>
	</developer>
  </developers>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.compiler.source>1.8</maven.compiler.source>
    <maven.compiler.target>1.8</maven.compiler.target>
  </properties>

  <dependencies>
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>4.12</version>
      <scope>test</scope>
    </dependency>
    <dependency>
    	<groupId>org.choco-solver</groupId>
    	<artifactId>choco-solver</artifactId>
    	<version>3.3.3</version>
    </dependency>
    <dependency>
    	<groupId>ca.umontreal.iro</groupId>
    	<artifactId>ssj</artifactId>
    	<version>2.5</version>
    </dependency>
    <dependency>
    	<groupId>org.la4j</groupId>
    	<artifactId>la4j</artifactId>
    	<version>0.6.0</version>
    </dependency>
    <dependency>
    	<groupId>org.apache.commons</groupId>
    	<artifactId>commons-math3</artifactId>
    	<version>3.6.1</version>
    </dependency>
  </dependencies>
  
  <build>
  	<plugins>
  	   <plugin>
		  <groupId>org.apache.maven.plugins</groupId>
		  <artifactId>maven-source-plugin</artifactId>
		  <version>3.0.1</version>
		  <executions>
		    <execution>
		      <id>attach-sources</id>
		      <goals>
		        <goal>jar</goal>
		      </goals>
		    </execution>
		  </executions>
		</plugin>
		<plugin>
		  <groupId>org.apache.maven.plugins</groupId>
		  <artifactId>maven-javadoc-plugin</artifactId>
		  <version>3.0.0</version>
		  <!--  
		  <configuration>
             <doclint>none</doclint>
          </configuration>
          -->
		  <executions>
		    <execution>
		      <id>attach-javadocs</id>
		      <goals>
		        <goal>jar</goal>
		      </goals>
		    </execution>
		  </executions>
		</plugin>
  		<!--  <plugin>
  			<groupId>org.apache.maven.plugins</groupId>
  			<artifactId>maven-shade-plugin</artifactId>
  			<version>2.3</version>
  			<executions>
		        <execution>
		            <phase>package</phase>
		            <goals>
		                <goal>shade</goal>
		            </goals>
		            <configuration>
		                <filters>
		                    <filter>
		                        <artifact>*:*</artifact>
		                        <excludes>
		                            <exclude>META-INF/*.SF</exclude>
		                            <exclude>META-INF/*.DSA</exclude>
		                            <exclude>META-INF/*.RSA</exclude>
		                        </excludes>
		                    </filter>
		                </filters>
		                <transformers>
		                    <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
		                        <mainClass>your.class.here</mainClass>
		                    </transformer>
		                </transformers>
		                <shadedArtifactAttached>true</shadedArtifactAttached>
		            </configuration>
		        </execution>
		    </executions>
  		</plugin> -->
  		<plugin>
		    <groupId>org.apache.maven.plugins</groupId>
		    <artifactId>maven-jarsigner-plugin</artifactId>
		    <version>1.4</version>
		    <executions>
		        <execution>
		            <id>sign</id>
		            <goals>
		                <goal>sign</goal>
		            </goals>
		        </execution>
		        <execution>
		            <id>verify</id>
		            <goals>
		                <goal>verify</goal>
		            </goals>
		        </execution>
		    </executions>
		    <configuration>
		        <keystore>${java-jar-signer}</keystore>
		        <alias>gwr3n.github.io</alias>
		        <storepass>${java-key-store-password}</storepass>
		        <keypass>${java-key-password}</keypass>
		    </configuration>
		</plugin>
		<plugin>
	        <groupId>org.apache.maven.plugins</groupId>
		    <artifactId>maven-gpg-plugin</artifactId>
		    <version>1.6</version>
		    <executions>
		        <execution>
		            <id>sign-artifacts</id>
					<phase>verify</phase>
		            <goals>
		                <goal>sign</goal>
		            </goals>
		        </execution>
		    </executions>
		</plugin>
  		<plugin>
  			<groupId>org.apache.maven.plugins</groupId>
  			<artifactId>maven-surefire-plugin</artifactId>
  			<version>2.12.4</version>
  			<configuration>
  			    <forkCount>1</forkCount>
                <reuseForks>false</reuseForks>
      			<argLine>-Djava.library.path=${ibex-native-lib}</argLine>
      			<enableAssertions>false</enableAssertions>
    			</configuration>
  		</plugin>
  		<plugin>
	      <groupId>org.sonatype.plugins</groupId>
	      <artifactId>nexus-staging-maven-plugin</artifactId>
	      <version>1.6.7</version>
	      <extensions>true</extensions>
	      <configuration>
	        <serverId>ossrh</serverId>
	        <nexusUrl>https://oss.sonatype.org/</nexusUrl>
	        <autoReleaseAfterClose>true</autoReleaseAfterClose>
	      </configuration>
	    </plugin>
  	</plugins>
  </build>
  
  <reporting>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-project-info-reports-plugin</artifactId>
        <version>2.8</version>
      </plugin>
    </plugins>
  </reporting>
  
  <distributionManagement>
	  <snapshotRepository>
	    <id>ossrh</id>
	    <url>https://oss.sonatype.org/content/repositories/snapshots</url>
	  </snapshotRepository>
	  <repository>
	    <id>ossrh</id>
	    <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
	  </repository>
  </distributionManagement>
</project>
